# -WIP-ft_ssl

./: .gitignore  CMakeLists.txt  ERROR  Makefile  append_padding_bits.c  append_padding_bits_256.c  append_padding_bits_512.c  block1_md5.c  block2_md5.c  block3_md5.c  block4_md5.c  blocks_md5.c  choice_algorithm_function.c  control_s_flags.c  delete_mass_sha512.c  file  file_diff.sh  fill_content.c  ft_ssl  fun.c  fun_256.c  fun_256_1.c  fun_512.c  fun_512_1.c  fun_round.c  head_ssl.h  head_ssl_struct.h  initialization_h_md5.c  internal_loop_part.c  link_hello  main.c  main_loop.c  main_loop_512.c  md5_algo.c  my_diff.sh  myfile  parsing_command.c  pre_parsing_flags.c  print_res_sha256.c  print_res_sha512.c  (+11 more)
bash_script/: file_diff.sh  ft_ssl  map  my_diff.sh  myfile  s_diff.sh  sha256_diff.sh  stfile  subject_md5.sh  test
delete_file/: start_work.c  start_work_with_sha256.c
test_input_link/: link_folder
