cmake_minimum_required(VERSION 3.9)
project(ft_ssl)

set(CMAKE_CXX_STANDARD 11)

add_executable(ft_ssl
        lib_folder/libft/ft_atoi.c
        lib_folder/libft/ft_atoi_ulli.c
        lib_folder/libft/ft_bzero.c
        lib_folder/libft/ft_isalnum.c
        lib_folder/libft/ft_isalpha.c
        lib_folder/libft/ft_isascii.c
        lib_folder/libft/ft_isdigit.c
        lib_folder/libft/ft_isprint.c
        lib_folder/libft/ft_itoa.c
        lib_folder/libft/ft_lstadd.c
        lib_folder/libft/ft_lstaddend.c
        lib_folder/libft/ft_lstdel.c
        lib_folder/libft/ft_lstdel_recursive.c
        lib_folder/libft/ft_lstdelone.c
        lib_folder/libft/ft_lstiter.c
        lib_folder/libft/ft_lstmap.c
        lib_folder/libft/ft_lstnew.c
        lib_folder/libft/ft_lstsize.c
        lib_folder/libft/ft_memalloc.c
        lib_folder/libft/ft_memccpy.c
        lib_folder/libft/ft_memchr.c
        lib_folder/libft/ft_memcmp.c
        lib_folder/libft/ft_memcpy.c
        lib_folder/libft/ft_memdel.c
        lib_folder/libft/ft_memmove.c
        lib_folder/libft/ft_memset.c
        lib_folder/libft/ft_putchar.c
        lib_folder/libft/ft_putchar_fd.c
        lib_folder/libft/ft_putendl.c
        lib_folder/libft/ft_putendl_fd.c
        lib_folder/libft/ft_putnbr.c
        lib_folder/libft/ft_putnbr_fd.c
        lib_folder/libft/ft_putstr.c
        lib_folder/libft/ft_putstr_fd.c
        lib_folder/libft/ft_sortmass.c
        lib_folder/libft/ft_strcat.c
        lib_folder/libft/ft_strchr.c
        lib_folder/libft/ft_strclr.c
        lib_folder/libft/ft_strcmp.c
        lib_folder/libft/ft_strcpy.c
        lib_folder/libft/ft_strdel.c
        lib_folder/libft/ft_strdel_char_mass.c
        lib_folder/libft/ft_strdup.c
        lib_folder/libft/ft_strequ.c
        lib_folder/libft/ft_striter.c
        lib_folder/libft/ft_striteri.c
        lib_folder/libft/ft_strjoin.c
        lib_folder/libft/ft_strlcat.c
        lib_folder/libft/ft_strlen.c
        lib_folder/libft/ft_strmap.c
        lib_folder/libft/ft_strmapi.c
        lib_folder/libft/ft_strncat.c
        lib_folder/libft/ft_strncmp.c
        lib_folder/libft/ft_strncpy.c
        lib_folder/libft/ft_strnequ.c
        lib_folder/libft/ft_strnew.c
        lib_folder/libft/ft_strnstr.c
        lib_folder/libft/ft_strrchr.c
        lib_folder/libft/ft_strsplit.c
        lib_folder/libft/ft_strstr.c
        lib_folder/libft/ft_strsub.c
        lib_folder/libft/ft_strtrim.c
        lib_folder/libft/ft_tolower.c
        lib_folder/libft/ft_toupper.c
        lib_folder/libft/get_next_line.c
        lib_folder/libft/libft.h
        head_ssl.h
        main.c
        parsing_command.c
        #start_work_with_md5.c
        #start_work_with_sha256.c
        md5_algo.c
        append_padding_bits.c
        fun.c
        fun_round.c
        read_screen.c
        read_file.c
        print_result.c
        pre_parsing_flags.c
        control_s_flags.c
        fill_content.c
        choice_algorithm_function.c
        #start_work.c
        sha256_algo.c
        append_padding_bits_256.c
        )
